# mortred_model_server

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.en-us.md  README.md  README.zh-cn.md  apiary.apib
src/apps/: CMakeLists.txt  bisenetv2_test.cpp  dbtext_test.cpp  test.cpp  yolov5_test.cpp
src/apps/fast_batch_process/: enlightengan_fast_batch_process.cpp
src/apps/model_benchmark/: attentivegan_benchmark.cpp  bisenetv2_benchmark.cpp  dbnet_benchmark.cpp  densenet_benchmark.cpp  enlightengan_benchmark.cpp  libface_benchmark.cpp  mobilenetv2_benchmark.cpp  nanodet_benchmark.cpp  resnet_benchmark.cpp  superpoint_benchmark.cpp  yolov5_benchmark.cpp
src/apps/model_benchmark/classification/: densenet_benchmark.cpp  (+3 more)
src/apps/proxy/: superpoint_upstream_proxy_server.cpp
src/apps/server/: densenet_classification_server.cpp  libface_detection_server.cpp  mobilenetv2_classification_server.cpp  nanodet_detection_server.cpp  resnet_classification_server.cpp  resnet_classification_w_lock_server.cpp  superpoint_fp_det_server.cpp  superpoint_fp_server.cpp  yolov5_detection_server.cpp
src/common/: CMakeLists.txt  base64.cpp  base64.h  cv_utils.h  file_path_util.cpp  file_path_util.h  http_utils.cpp  http_utils.h  md5.cpp  md5.h  status_code.cpp  status_code.h  time_stamp.cpp  time_stamp.h
src/factory/: CMakeLists.txt  base_factory.h  classification_task.h  enhancement_task.h  feature_point_task.h  image_object_detection_task.h  image_ocr_task.h  llm_task.h  matting_task.h  model_register_marco.h  mono_depth_estimate_task.h  obj_detection_task.h  ocr_task.h  register_marco.h  scene_segmentation_task.h
src/models/: CMakeLists.txt  base_model.h  model_io_define.h
src/models/classification/: densenet.h  densenet.inl  dinov2.h  dinov2.inl  mobilenetv2.h  mobilenetv2.inl  resnet.h  resnet.inl
src/models/clip/: clip_tokenizer.cpp  clip_tokenizer.h  openai_clip.cpp  openai_clip.h  openai_clip_text_encoder.cpp  openai_clip_text_encoder.h  openai_clip_vit_encoder.cpp  openai_clip_vit_encoder.h  simple_tokenizer.cpp  simple_tokenizer.h
src/models/diffussion/: autoencoder_kl.h  autoencoder_kl.inl  cls_cond_ddim_sampler.h  cls_cond_ddim_sampler.inl  cls_cond_ddpm_unet.h  cls_cond_ddpm_unet.inl  ddim_sampler.h  ddim_sampler.inl  ddpm_sampler.h  ddpm_sampler.inl  ddpm_unet.h  ddpm_unet.inl  ldm_sampler.h  ldm_sampler.inl
src/models/enhancement/: attentive_gan_derain_net.h  attentive_gan_derain_net.inl  enlightengan.h  enlightengan.inl  real_esrgan.h  real_esrgan.inl
src/models/feature_point/: lightglue.h  lightglue.inl  superpoint.h  superpoint.inl
src/models/image_object_detection/: yolov5_detector.h  yolov5_detector.inl
src/models/image_ocr/: db_text_detector.cpp  db_text_detector.h  db_text_detector.inl
src/models/llm/: base_generator.h  llm_datatype.hpp
src/models/matting/: modnet_matting.h  modnet_matting.inl  pp_matting.h  pp_matting.inl
src/models/mono_depth_estimation/: depth_anything.h  depth_anything.inl  metric3d.h  metric3d.inl
src/models/object_detection/: centerface_detector.h  centerface_detector.inl  libface_detector.h  libface_detector.inl  nano_detector.h  nano_detector.inl  yolov5_detector.h  yolov5_detector.inl  yolov6_detector.h  yolov6_detector.inl  yolov7_detector.h  yolov7_detector.inl  yolov8_detector.h  yolov8_detector.inl
src/models/ocr/: db_text_detector.h  db_text_detector.inl
src/models/scene_segmentation/: bisenet_v2.h  bisenet_v2.inl  bisenetv2.h  bisenetv2.inl  hrnet_segmentation.h  hrnet_segmentation.inl  modnet_matting.h  modnet_matting.inl  msocrnet.h  msocrnet.inl  pp_humanseg.h  pp_humanseg.inl  pp_matting.h  pp_matting.inl
src/models/segment_anything/: fast_sam_segmentor.cpp  fast_sam_segmentor.h  sam_decoder.cpp  sam_decoder.h  sam_segmentor.cpp  sam_segmentor.h  sam_trt_amg_decoder.cpp  sam_trt_amg_decoder.h  sam_trt_decoder.cpp  sam_trt_decoder.h  sam_trt_everything_decoder.cpp  sam_trt_everything_decoder.h  sam_trt_segmentor.cpp  sam_trt_segmentor.h  sam_vit_encoder.cpp  sam_vit_encoder.h  sam_vit_trt_encoder.cpp  sam_vit_trt_encoder.h
src/models/trt_helper/: onnx2trt_model_builder.cpp  onnx2trt_model_builder.h  trt_helper.cpp  trt_helper.h
src/registration/: CMakeLists.txt  registration_helper.cpp  registration_server.cpp  registration_server.h  route_table.cpp  route_table.h
src/registration/mysql/: mysql_data_type.h  mysql_db_config.cpp  mysql_db_config.h  mysql_helper.cpp  mysql_helper.h  sql_query_builder.cpp  sql_query_builder.h  sql_query_builder.hpp
src/server/: CMakeLists.txt  abstract_server.h  base_server.h  base_server_impl.h
src/server/classification/: densenet_server.cpp  densenet_server.h  mobilenetv2_server.cpp  mobilenetv2_server.h  resnet_server.cpp  resnet_server.h  resnet_server.hpp  resnet_server_with_lock.hpp
src/server/enhancement/: attentive_gan_derain_server.cpp  attentive_gan_derain_server.h  enlighten_gan_server.cpp  enlighten_gan_server.h  real_esr_gan_server.cpp  real_esr_gan_server.h
src/server/feature_point/: superpoint_fp_server.cpp  superpoint_fp_server.h
src/server/matting/: modnet_server.cpp  modnet_server.h  pp_matting_server.cpp  pp_matting_server.h
src/server/mono_depth_estimation/: depth_anything_server.cpp  depth_anything_server.h  metric3d_server.cpp  metric3d_server.h
src/server/object_detection/: centerface_det_server.cpp  centerface_det_server.h  libface_det_server.cpp  libface_det_server.h  nano_det_server.cpp  nano_det_server.h  nanodet_server.cpp  yolov5_det_server.cpp  yolov5_det_server.h  yolov5det_server.cpp  yolov5det_server.h  yolov6_det_server.cpp  yolov6_det_server.h  yolov7_det_server.cpp  yolov7_det_server.h  yolov8_det_server.cpp  yolov8_det_server.h
src/server/ocr/: dbnet_server.cpp  dbnet_server.h
src/server/scene_segmentation/: bisenetv2_server.cpp  bisenetv2_server.h  hrnet_server.cpp  hrnet_server.h  pphuman_seg_server.cpp  pphuman_seg_server.h
src/server/tiny_mcp/: vision_mcp_server.cpp  vision_mcp_server.h
test/: CMakeLists.txt  base64_unittest.cc  file_path_util_unittest.cc  md5_unittest.cc
(+256 files in other folders)
